feat: cicd、doc、ut

--- a/{{cookiecutter.project_slug}}/CMakeLists.txt
+++ b/{{cookiecutter.project_slug}}/CMakeLists.txt
@@ -7,16 +7,11 @@ include(cmake/lifecycle/pre_project.cmake)
 project({{cookiecutter.project_slug}})
 include(cmake/lifecycle/post_project.cmake)
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
-include(ccache)
 
 option(BUILD_DOCS "Enable building of documentation" ON)
 option(BUILD_TESTING "Enable building of unittest" ON)
 
 add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(unittest)
 add_subdirectory(example)
