--- a/{{cookiecutter.project_slug}}/unittest/CMakeLists.txt
+++ b/{{cookiecutter.project_slug}}/unittest/CMakeLists.txt
@@ -1,1 +1,9 @@
 CPMAddPackage("gh:google/googletest#v1.16.0")
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+add_executable(unittest
+    cxx_project_name_unittest.cpp
+)
+
+target_link_libraries(unittest gtest_main gmock)
+enable_testing()
+add_test(NAME unittest COMMAND unittest)
